14817
Using Scala version 2.8.0.r20087-b20091210111324 (OpenJDK 64-Bit Server VM, Java 1.6.0_0)

This is a somewhat contrived example to suggest that default parameters should be explicitly checked for changes.  Currently, switching whether a method parameter has a default triggers a change in clients only because a synthetic method for the default is added or removed.  Knowing how defaults are encoded, we can come up with a problematic case to demonstrate this.

Given A.scala, B.scala
```scala
object A {
  def x(f: String, g: Int): Int = g
  def x(f: Int, g: Int = 3): Int = g
}
object B {
  val y = A.x(5)
}
```


 1. Compile A.scala, B.scala
 1. Modify A.scala:
```scala
object A {
  def x(f: String, g: Int = 3): Int = g
  def x(f: Int, g: Int): Int = g
}
```
 1. Mark A.scala updated.  B.scala is not recompiled, missing the following error:
```scala
B.scala:3: error: type mismatch;
 found   : Int(5)
 required: String
Error occured in an application involving default arguments.
        val y = A.x(5)
                    ^
```
